--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "mental-poker-toolkit",
-  "version": "0.0.1",
+  "private": true,
   "description": "A Mental Poker toolkit for building games in zero-trust environments.",
-  "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vladris/mental-poker-toolkit.git"
+    "build": "npm run build --ws"
   },
   "author": "Vlad Riscutia",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vladris/mental-poker-toolkit/issues"
-  },
-  "homepage": "https://github.com/vladris/mental-poker-toolkit#readme"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vladris/mental-poker-toolkit.git"
+  }
 }
