Add Fluid client transport over ILedger<string>

--- a/packages/fluid-client/package.json
+++ b/packages/fluid-client/package.json
@@ -14,5 +14,9 @@
   },
   "devDependencies": {
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@mental-poker-toolkit/types": "^0.0.1",
+    "fluid-ledger-dds": "^0.1.3"
   }
 }
