--- a/packages/signed-transport/tsconfig.json
+++ b/packages/signed-transport/tsconfig.json
@@ -8,5 +8,9 @@
     "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["src/test/*"]
+  "exclude": ["src/test/*"],
+  "references": [
+    { "path": "../types/tsconfig.json" },
+    { "path": "../cryptography/tsconfig.json" }
+  ]
 }
