--- a/packages/cryptography/package.json
+++ b/packages/cryptography/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@mental-poker-toolkit/types": "^0.0.1",
     "base64-arraybuffer": "^1.0.2"
   }
 }
