--- a/packages/cryptography/tsconfig.json
+++ b/packages/cryptography/tsconfig.json
@@ -7,5 +7,8 @@
     "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["src/test/*"]
+  "exclude": ["src/test/*"],
+  "references": [
+    { "path": "../types/tsconfig.json" }
+  ]
 }
