--- a/packages/signed-transport/package.json
+++ b/packages/signed-transport/package.json
@@ -14,5 +14,9 @@
   },
   "devDependencies": {
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@mental-poker-toolkit/cryptography": "^0.0.1",
+    "@mental-poker-toolkit/types": "^0.0.1"
   }
 }
