Sketch state machine implementation

--- a/packages/state-machine/package.json
+++ b/packages/state-machine/package.json
@@ -14,5 +14,8 @@
   },
   "devDependencies": {
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@mental-poker-toolkit/types": "^0.0.1"
   }
 }
