State machine demo scaffolding

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "packages/fluid-client",
     "packages/signed-transport",
     "packages/state-machine",
+    "demos/state-machine",
     "demos/transport"
   ],
   "scripts": {
