--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -16,6 +16,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@mental-poker-toolkit/types": "^0.0.1"
+    "@mental-poker-toolkit/types": "^0.0.1",
+    "@mental-poker-toolkit/cryptography": "^0.0.1",
+    "@mental-poker-toolkit/signed-transport": "^0.0.1",
+    "@mental-poker-toolkit/state-machine": "^0.0.1"
   }
 }
