--- a/demos/rock-paper-scissors/package.json
+++ b/demos/rock-paper-scissors/package.json
@@ -10,8 +10,10 @@
     "@mental-poker-toolkit/signed-transport": "^0.0.1",
     "@mental-poker-toolkit/state-machine": "^0.0.1",
     "@mental-poker-toolkit/types": "^0.0.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "url": "^0.11.0"
   },
