--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/cryptography",
     "packages/fluid-client",
     "packages/signed-transport",
+    "packages/action-queue",
     "packages/state-machine",
     "packages/primitives",
     "demos/transport",
