--- a/packages/action-queue/package.json
+++ b/packages/action-queue/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mental-poker-toolkit/state-machine",
+  "name": "@mental-poker-toolkit/action-queue",
   "version": "0.0.1",
-  "description": "State machine for Mental Poker",
+  "description": "Async action queue abstraction over transport",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc"
@@ -16,7 +16,6 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@mental-poker-toolkit/types": "^0.0.1",
-    "@mental-poker-toolkit/action-queue": "^0.0.1"
+    "@mental-poker-toolkit/types": "^0.0.1"
   }
 }
