--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -19,6 +19,7 @@
     "@mental-poker-toolkit/types": "^0.0.1",
     "@mental-poker-toolkit/cryptography": "^0.0.1",
     "@mental-poker-toolkit/signed-transport": "^0.0.1",
+    "@mental-poker-toolkit/action-queue": "^0.0.1",
     "@mental-poker-toolkit/state-machine": "^0.0.1"
   }
 }
