--- a/packages/cryptography/package.json
+++ b/packages/cryptography/package.json
@@ -4,7 +4,8 @@
   "description": "Cryptography library for Mental Poker",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "author": "Vlad Riscutia",
   "license": "MIT",
@@ -13,6 +14,12 @@
     "url": "git+https://github.com/vladris/mental-poker-toolkit.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
